--- a/homepage.html
+++ b/homepage.html
@@ -191,7 +191,7 @@
           <!-- wrap annunci per applicare background -->
           <div class="p-2 custom_bg">
             <div class="row">
-              <div class="col-3 pe-0">
+              <div class="col-3 pe-0"">
                 <img
                   class="p-2"
                   src="./assets/imgs/main/image-11.jpg"
@@ -199,12 +199,12 @@
                 />
               </div>
               <div class="col-6">
-                <div class="small_txt"><p>ALBUM</p></div>
+                <div class="xsmall_txt"><p>ALBUM</p></div>
                 <div>
                   <h1 class="m-0">MERCURY</h1>
                 </div>
-                <div class="small_txt"><p>Imagine Dragon</p></div>
-                <div class="small_txt">
+                <div class="xsmall_txt"><p>Imagine Dragon</p></div>
+                <div class="xsmall_txt">
                   Ascolta il nuovo album degli Imagine Dragon!
                 </div>
                 <div class="mt-2">
@@ -224,13 +224,13 @@
                 </div>
               </div>
               <div class="col-3">
-                <p class="small_txt text-muted">NASCONDI ANNUNCIO</p>
+                <p class="xsmall_txt text-muted">NASCONDI ANNUNCIO</p>
               </div>
             </div>
           </div>
           <!-- PLAYLIST HOME -->
           <h4 class="d-block my-3">Buonasera</h4>
-          <div class="row row-cols-2 row-cols-lg-3 gy-3">
+          <div class="row row-cols-sm-2 row-cols-lg-3 gy-3">
             <div class="d-flex col">
               <img
                 src="./assets/imgs/main/image-18.jpg"
@@ -288,70 +288,105 @@
           </div>
           <div class="d-flex justify-content-between align-items-center my-3">
             <h5>Altro di ciò che ti piace</h5>
-            <p class="small_txt text-muted m-0">Mostra tutto</p>
+            <p class="xsmall_txt text-muted m-0">Mostra tutto</p>
           </div>
 
-          <div class="row row-cols-2 row-cols-lg-5">
+          <div class="row row-cols-sm-2 row-cols-md-3 row-cols-lg-5 gy-3">
             <!-- CARDS ALTRO -->
 
             <div class="col">
-              <div class="card border-0 bg_two">
-                <img src="./assets/imgs/main/image-1.jpg" style="max-height:
-                150px"" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title fs-6">Card title</h5>
-                  <p class="card-text small_txt text-muted">
-                    This is a longer card
-                  </p>
+              <div class="card_wrap" role="button">
+                <div class="image_wrap">
+                  <img
+                  src="./assets/imgs/main/image-1.jpg"
+                  style="max-height: 150px"
+                  class="card-img-top"
+                  alt="..."
+                  />
+                  <div class="playIt" type="button">
+                    <i class="bi bi-play-fill rounded-circle bg-success p-2"></i>
+                  </div>
                 </div>
+                <h5 class="card-title mt-2 fs-6">Card title</h5>
+                <p class="xsmall_txt m-0 py-2 text-muted">
+                  This is a longer card
+                </p>
               </div>
             </div>
             <div class="col">
-              <div class="card border-0 bg_two">
-                <img src="./assets/imgs/main/image-1.jpg" style="max-height:
-                150px"" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title fs-6">Card title</h5>
-                  <p class="card-text small_txt text-muted">
-                    This is a longer card
-                  </p>
+              <div class="card_wrap" role="button">
+                <div class="image_wrap">
+                  <img
+                  src="./assets/imgs/main/image-1.jpg"
+                  style="max-height: 150px"
+                  class="card-img-top"
+                  alt="..."
+                  />
+                  <div class="playIt" type="button">
+                    <i class="bi bi-play-fill rounded-circle bg-success p-2"></i>
+                  </div>
                 </div>
+                <h5 class="card-title mt-2 fs-6">Card title</h5>
+                <p class="xsmall_txt m-0 py-2 text-muted">
+                  This is a longer card
+                </p>
               </div>
             </div>
             <div class="col">
-              <div class="card border-0 bg_two">
-                <img src="./assets/imgs/main/image-1.jpg" style="max-height:
-                150px"" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title fs-6">Card title</h5>
-                  <p class="card-text small_txt text-muted">
-                    This is a longer card
-                  </p>
+              <div class="card_wrap" role="button">
+                <div class="image_wrap">
+                  <img
+                  src="./assets/imgs/main/image-1.jpg"
+                  style="max-height: 150px"
+                  class="card-img-top"
+                  alt="..."
+                  />
+                  <div class="playIt" type="button">
+                    <i class="bi bi-play-fill rounded-circle bg-success p-2"></i>
+                  </div>
                 </div>
+                <h5 class="card-title mt-2 fs-6">Card title</h5>
+                <p class="xsmall_txt m-0 py-2 text-muted">
+                  This is a longer card
+                </p>
               </div>
             </div>
             <div class="col">
-              <div class="card border-0 bg_two">
-                <img src="./assets/imgs/main/image-1.jpg" style="max-height:
-                150px"" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title fs-6">Card title</h5>
-                  <p class="card-text small_txt text-muted">
-                    This is a longer card
-                  </p>
+              <div class="card_wrap" role="button">
+                <div class="image_wrap">
+                  <img
+                  src="./assets/imgs/main/image-1.jpg"
+                  style="max-height: 150px"
+                  class="card-img-top"
+                  alt="..."
+                  />
+                  <div class="playIt" type="button">
+                    <i class="bi bi-play-fill rounded-circle bg-success p-2"></i>
+                  </div>
                 </div>
+                <h5 class="card-title mt-2 fs-6">Card title</h5>
+                <p class="xsmall_txt m-0 py-2 text-muted">
+                  This is a longer card
+                </p>
               </div>
             </div>
             <div class="col">
-              <div class="card border-0 bg_two">
-                <img src="./assets/imgs/main/image-1.jpg" style="max-height:
-                150px"" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title fs-6">Card title</h5>
-                  <p class="card-text small_txt text-muted">
-                    This is a longer card
-                  </p>
+              <div class="card_wrap" role="button">
+                <div class="image_wrap">
+                  <img
+                  src="./assets/imgs/main/image-1.jpg"
+                  style="max-height: 150px"
+                  class="card-img-top"
+                  alt="..."
+                  />
+                  <div class="playIt" type="button">
+                    <i class="bi bi-play-fill rounded-circle bg-success p-2"></i>
+                  </div>
                 </div>
+                <h5 class="card-title mt-2 fs-6">Card title</h5>
+                <p class="xsmall_txt m-0 py-2 text-muted">
+                  This is a longer card
+                </p>
               </div>
             </div>
             <!-- SM/MD None -->
@@ -361,12 +396,68 @@
 
           <div class="d-flex justify-content-between align-items-center my-3">
             <h5>I tuoi artisti preferiti</h5>
-            <p class="small_txt text-muted m-0">Mostra tutto</p>
+            <p class="xsmall_txt text-muted m-0">Mostra tutto</p>
           </div>
           <!-- ROW ARTISTI -->
-          <div class="row row-cols-2 row-cols-lg-5">
-            <div class="col"></div>
+          <div id="show_art" class="row row-cols-2 row-cols-lg-5 gy-3">
+            <!-- <div class="col">
+              <div class="card border-0 p-2 bg_two" role="button">
+                <img
+                  src="./assets/imgs/main/image-1.jpg"
+                  style="max-height: 150px"
+                  class="card-img-top rounded-circle"
+                  alt="..."
+                />
+                <div class="card-body px-0 py-2">
+                  <h5 class="card-title fs-6">Card title</h5>
+                  <p class="card-text xsmall_txt text-muted">Artista</p>
+                </div>
+              </div>
+            </div> -->
           </div>
+          <footer class="mt-3">
+            <div class="row row-cols-2 row-cols-lg-5 gy-0">
+              <div class="col">
+                <ul>
+                  <li>Azienda</li>
+                  <li>Chi Siamo</li>
+                  <li>Opportunità di lavoro</li>
+                  <li>For the Record</li>
+                </ul>
+              </div>
+              <div class="col">
+                <ul>
+                  <li>Community</li>
+                  <li>Per Artisti</li>
+                  <li>Sviluppatori</li>
+                  <li>Pubblicità</li>
+                  <li>Investitori</li>
+                  <li>Venditori</li>
+                </ul>
+              </div>
+              <div class="col">
+                <ul>
+                  <li>Link Utili</li>
+                  <li>Assistenza</li>
+                  <li>App per cellulare gratuita</li>
+                  <li>Diritti del consumatore</li>
+                </ul>
+              </div>
+              <div class="col">
+                <ul>
+                  <li>Piani Spotify</li>
+                  <li>Premium Individual</li>
+                  <li>Premium Duo</li>
+                  <li>Premium Family</li>
+                  <li>Premium Student</li>
+                  <li>Spotify Free</li>
+                </ul>
+              </div>
+              <div class="col">
+                <div><i class="bi bi-instagram rounded-circle bg_two p-2 mx-1"></i><i class="bi bi-twitter rounded-circle bg_two p-2 mx-1"></i><i class="bi bi-facebook rounded-circle bg_two p-2 mx-1"></i></div>
+              </div>
+            </div>
+          </footer>
         </div>
 
         <div class="col-2 activity bg-black">
@@ -434,7 +525,6 @@
             </div>
           </div>
         </div>
-        <div class="col-12 justify-content-between"></div>
       </div>
     </div>
     <script
@@ -442,5 +532,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="./homepage.js"></script>
   </body>
 </html>
