--- a/album.html
+++ b/album.html
@@ -145,7 +145,7 @@
           </div>
         </div>
 
-        <!-- PARTE CENTALE -->
+        <!-- PARTE CENTRALE -->
 
         <div class="col-12 col-md-9 col-lg-7 text-white MainContent pt-2 pb-5 px-0 bg-primary-subtle bg-gradient" id="MainContentAlbum">
           <div class="barraUtente d-flex justify-content-between align-items-center">
@@ -394,5 +394,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/album.js"></script>
   </body>
 </html>
