--- a/album.html
+++ b/album.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Artist Page</title>
+    <title>Album Page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -192,16 +192,27 @@
               </div>
             </div>
           </div>
-          <div class="bg-body-tertiary mt-3 text-decoration-none" style="--bs-bg-opacity: 0.5">
+          <div class="bg-body-tertiary mt-2 pt-1 text-decoration-none" style="--bs-bg-opacity: 0.5">
             <div class="d-flex align-items-center">
-              <i class="fs-1 ms-5 bi bi-play-circle text-success"></i>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="40"
+                height="40"
+                fill="currentColor"
+                class="bi bi-play-fill text-black"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"
+                />
+              </svg>
               <i class="fs-5 bi bi-heart ms-4"></i>
               <i class="fs-5 bi bi-download ms-4"></i>
               <i class="fs-5 bi bi-three-dots ms-4"></i>
             </div>
 
             <div class="row song-list">
-              <div class="col-12 song-item d-flex align-items-center pt-2 sticky">
+              <div class="col-12 d-flex align-items-center pt-5 sticky">
                 <small class="col-1"></small>
                 <small class="col-1">#</small>
                 <small class="col-6">TITOLO</small>
@@ -281,7 +292,7 @@
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">12</div>
+                <div class="col-1">11</div>
                 <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
@@ -295,63 +306,63 @@
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">12</div>
+                <div class="col-1">13</div>
                 <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">12</div>
+                <div class="col-1">14</div>
                 <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">12</div>
+                <div class="col-1">15</div>
                 <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">12</div>
+                <div class="col-1">16</div>
                 <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">12</div>
+                <div class="col-1">17</div>
                 <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">12</div>
+                <div class="col-1">18</div>
                 <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">12</div>
+                <div class="col-1">19</div>
                 <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">12</div>
+                <div class="col-1">20</div>
                 <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">12</div>
+                <div class="col-1">21</div>
                 <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
