--- a/homepage.html
+++ b/homepage.html
@@ -209,7 +209,7 @@
             <div class="row">
               <div class="col-3 pe-0"">
                 <img
-                  class="p-2"
+                  class="p-2 img-fluid"
                   src="./assets/imgs/main/image-11.jpg"
                   style="max-height: 170px"
                 />
@@ -246,77 +246,67 @@
           </div>
           <!-- PLAYLIST HOME -->
 
-          <div class="row row-cols-xs-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 gy-3 mt-5">
+          <div class="row row-cols-2 row-cols-lg-3 gy-3 mt-5">
             <div class="col">
-              <div class="playlist_wrap d-flex bg_two rounded-1 position-relative">
+              <div class="playlist_wrap d-flex align-items-center bg_two rounded-1 position-relative">
                 <img
                 class="rounded-start-1"
                 src="./assets/imgs/main/image-18.jpg"
                 style="max-height: 70px"
                 />
-                <div class="d-flex align-items-center flex-grow-1">
-                  <h5 class="text-truncate ms-3 my-0">Estate 2022</h5>
-                </div>
+                <h5 class="text-truncate ms-3 my-0">Estate 2022</h5>
                 <div class="p_playlist">
                   <i class="bi bi-play-circle-fill play_color shadow"></i>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="playlist_wrap d-flex bg_two rounded-1 position-relative">
+              <div class="playlist_wrap d-flex align-items-center bg_two rounded-1 position-relative">
                 <img
                 class="rounded-start-1"
                 src="./assets/imgs/main/image-8.jpg"
                 style="max-height: 70px"
                 />
-                <div class="d-flex align-items-center flex-grow-1">
-                  <h5 class="text-truncate ms-3 my-0">Sangue Giovane</h5>
-                </div>
+                <h5 class="text-truncate ms-3 my-0">Sangue Giovane</h5>
                 <div class="p_playlist">
                   <i class="bi bi-play-circle-fill play_color shadow"></i>
                 </div>
               </div> 
             </div>
             <div class="col">
-              <div class="playlist_wrap d-flex bg_two rounded-1 position-relative">
+              <div class="playlist_wrap d-flex align-items-center bg_two rounded-1 position-relative">
                 <img
                 class="rounded-start-1"
                 src="./assets/imgs/main/image-3.jpg"
                 style="max-height: 70px"
                 />
-                <div class="d-flex align-items-center flex-grow-1">
-                  <h5 class="text-truncate ms-3 my-0">Massima Concentrazione</h5>
-                </div>
+                <h5 class="text-truncate ms-3 my-0">Massima Concentrazione</h5>
                 <div class="p_playlist">
                   <i class="bi bi-play-circle-fill play_color shadow"></i>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="playlist_wrap d-flex bg_two rounded-1 position-relative">
+              <div class="playlist_wrap d-flex align-items-center bg_two rounded-1 position-relative">
                 <img
                 class="rounded-start-1"
                 src="./assets/imgs/main/image-14.jpg"
                 style="max-height: 70px"
                 />
-                <div class="d-flex align-items-center flex-grow-1">
-                  <h5 class="text-truncate ms-3 my-0">Allenamento a Casa</h5> 
-                </div>
+                <h5 class="text-truncate ms-3 my-0">Allenamento a Casa</h5> 
                 <div class="p_playlist">
                   <i class="bi bi-play-circle-fill play_color shadow"></i>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="playlist_wrap d-flex bg_two rounded-1 position-relative">
+              <div class="playlist_wrap d-flex align-items-center bg_two rounded-1 position-relative">
                 <img
                 class="rounded-start-1"
                 src="./assets/imgs/main/image-4.jpg"
                 style="max-height: 70px"
                 />
-                <div class="d-flex align-items-center flex-grow-1">
-                  <h5 class="text-truncate ms-3 my-0">Peaceful Piano</h5>
-                </div>
+                <h5 class="text-truncate ms-3 my-0">Peaceful Piano</h5>
                 <div class="p_playlist">
                   <i class="bi bi-play-circle-fill play_color shadow"></i>
                 </div>
@@ -326,15 +316,13 @@
               </div>
             </div>
             <div class="col">
-              <div class="playlist_wrap d-flex bg_two rounded-1 position-relative">
+              <div class="playlist_wrap d-flex align-items-center bg_two rounded-1 position-relative">
                 <img
                 class="rounded-start-1"
                 src="./assets/imgs/main/image-6.jpg"
                 style="max-height: 70px"
                 />
-                <div class="d-flex align-items-center flex-grow-1">
-                  <h5 class="text-truncate ms-3 my-0">Jazz Vibes</h5> 
-                </div>
+                <h5 class="text-truncate ms-3 my-0">Jazz Vibes</h5> 
                 <div class="p_playlist">
                   <i class="bi bi-play-circle-fill play_color shadow"></i>
                 </div>
@@ -358,7 +346,7 @@
             <p class="xsmall_txt text-muted m-0">Mostra tutto</p>
           </div>
           <!-- ROW ARTISTI -->
-          <div id="show_art" class="row row-cols-xs-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-5 gy-3">
+          <div id="show_art" class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-5 gy-3">
             <!-- CARDS ARTIST -->
           </div>
           <footer class="mt-5">
