--- a/search.html
+++ b/search.html
@@ -33,6 +33,7 @@
     <div class="titolo">
       <h1>Sfoglia Tutto</h1>
     </div>
+    <div id="player"></div>
 
     <div class="container mt-5">
       <div class="row justify-content-center">
@@ -177,5 +178,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
+    <script src="https://cdns-files.deezer.com/js/min/dz.js"></script>
+    <script src="./search.js"></script>
   </body>
 </html>
