--- a/album.html
+++ b/album.html
@@ -14,13 +14,6 @@
     <link rel="stylesheet" href="./assets/css/circular-font.css" />
     <link rel="stylesheet" href="./assets/css/artist.css" />
     <link rel="stylesheet" href="./assets/css/album.css" />
-    <!-- <style>
-      #MainContentAlbum {
-        overflow-y: scroll;
-        overflow-x: hidden;
-        max-height: 94vh;
-      }
-    </style> -->
   </head>
   <body data-bs-theme="dark">
     <div class="container-fluid">
@@ -201,6 +194,7 @@
                 fill="currentColor"
                 class="bi bi-play-fill text-black"
                 viewBox="0 0 16 16"
+                class="play-btn"
               >
                 <path
                   d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"
@@ -223,149 +217,129 @@
               <div class="col-12 song-item d-flex align-items-center mt-3">
                 <div class="col-1"></div>
                 <div class="col-1">1</div>
-                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  Montanelli - Intro <br />
+                  <small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
+                <div class="col-1 durata-canzone">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
                 <div class="col-1">2</div>
-                <div class="col-6">Sciare<br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  Sciare<br /><small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">1,294,678</div>
-                <div class="col-1">2:49</div>
+                <div class="col-1 durata-canzone">2:49</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
                 <div class="col-1">3</div>
-                <div class="col-6">Gioventù Brucata <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  Gioventù Brucata <br /><small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">974,578</div>
-                <div class="col-1">2:28</div>
+                <div class="col-1 durata-canzone">2:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
                 <div class="col-1">4</div>
-                <div class="col-6">Ninnananna per genitori disattenti<br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  Ninnananna per genitori disattenti<br /><small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">6,394,078</div>
-                <div class="col-1">4:08</div>
+                <div class="col-1 durata-canzone">4:08</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
                 <div class="col-1">5</div>
-                <div class="col-6">L'uomo che inventò il fuoco<br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  L'uomo che inventò il fuoco<br /><small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">294,070</div>
-                <div class="col-1">4:21</div>
+                <div class="col-1 durata-canzone">4:21</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
                 <div class="col-1">6</div>
-                <div class="col-6">Irene <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  Irene <br /><small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">1,094,578</div>
-                <div class="col-1">3:28</div>
+                <div class="col-1 durata-canzone">3:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
                 <div class="col-1">7</div>
-                <div class="col-6">Senti che cantare questi <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  Senti che cantare questi <br /><small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
+                <div class="col-1 durata-canzone">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
                 <div class="col-1">8</div>
-                <div class="col-6">Pula <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  Pula <br /><small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
+                <div class="col-1 durata-canzone">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
                 <div class="col-1">9</div>
-                <div class="col-6">Ocean Avenue <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  Ocean Avenue <br /><small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
+                <div class="col-1 durata-canzone">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
                 <div class="col-1">10</div>
-                <div class="col-6">Only One <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  Only One <br /><small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
+                <div class="col-1 durata-canzone">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
                 <div class="col-1">11</div>
-                <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  Breathing <br /><small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
+                <div class="col-1 durata-canzone">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
                 <div class="col-1">12</div>
-                <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  Breathing <br /><small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
+                <div class="col-1 durata-canzone">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
                 <div class="col-1">13</div>
-                <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  Breathing <br /><small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
+                <div class="col-1 durata-canzone">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
                 <div class="col-1">14</div>
-                <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-6 titolo-canzone">
+                  Breathing <br /><small class="fw-light opacity-50 artista-canzone">Pinguini Tattici Nucleari</small>
+                </div>
                 <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">15</div>
-                <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
-                <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">16</div>
-                <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
-                <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">17</div>
-                <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
-                <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">18</div>
-                <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
-                <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">19</div>
-                <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
-                <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">20</div>
-                <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
-                <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">21</div>
-                <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
-                <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
+                <div class="col-1 durata-canzone">1:28</div>
               </div>
             </div>
           </div>
@@ -443,29 +417,29 @@
               </div>
             </div>
             <div class="col-3 d-flex align-items-center ps-4">
-              <img src="./assets/imgs/main/image-12.jpg" alt="Album Cover" class="rounded me-3 me-4" width="55" />
+              <img src="./assets/imgs/main/image-12.jpg" alt="Album Cover" class="rounded me-3 me-4 image-song" width="55" />
               <div>
-                <strong>Fat Funny Friend</strong><br />
-                <small>Maddie Zahm</small>
+                <strong class="title-song">Fat Funny Friend</strong><br />
+                <small class="artist-song">Maddie Zahm</small>
               </div>
               <i class="bi bi-heart ms-3"></i>
             </div>
             <div class="col-6 d-flex flex-column justify-content-center flex-grow-1 px-5 d-none d-md-flex">
               <div class="d-flex align-items-center justify-content-center">
                 <i class="fs-5 mx-2 text-success bi bi-shuffle pointer"></i>
-                <i class="fs-5 mx-2 bi bi-skip-backward-fill pointer"></i>
-                <i class="fs-2 mx-2 bi bi-play-circle-fill pointer"></i>
-                <i class="fs-5 mx-2 bi bi-skip-forward-fill pointer"></i>
+                <i class="fs-5 mx-2 bi bi-skip-backward-fill pointer previous-btn"></i>
+                <i class="fs-2 mx-2 bi bi-play-circle-fill pointer play-btn"></i>
+                <i class="fs-5 mx-2 bi bi-skip-forward-fill pointer next-btn"></i>
                 <i class="fs-5 mx-2 text-success bi bi-arrow-repeat pointer"></i>
               </div>
               <div class="d-flex align-items-center">
-                <small>0:58</small>
+                <small class="current-duration">0:00</small>
                 <div class="progress mx-2 flex-grow-1">
-                  <div class="progress-bar" role="progressbar" style="width: 30%">
+                  <div class="bg-white progress-bar" role="progressbar">
                     <!-- da mettere apposto con JS -->
                   </div>
                 </div>
-                <small>3:20</small>
+                <small class="duration-song">3:20</small>
               </div>
             </div>
             <div class="col-3 d-flex justify-content-end align-items-center ps-5 pe-3 d-none d-md-flex">
@@ -474,7 +448,7 @@
               <i class="fs-5 px-2 bi bi-speaker pointer"></i>
               <i class="fs-2 me-1 bi bi-volume-down pointer"></i>
               <div class="progress mx-2" style="width: 100px">
-                <div class="progress-bar" role="progressbar" style="width: 30%"></div>
+                <div class="bg-white volume-bar" style="width: 30%"></div>
               </div>
               <i class="fs-5 px-2 bi bi-arrows-angle-expand pointer"></i>
             </div>
