--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
+    <title>Spotyfy - lettore web: musica per tutti</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -195,7 +195,6 @@
         </div>
 
         <!-- PARTE CENTRALE -->
-
         <div id="main-scroll" class="col-sm-12 col-md-9 col-lg-7 mt-3">
           <div>
             <div>
@@ -205,7 +204,7 @@
           </div>
           <!-- ANNUNCI -->
           <!-- wrap annunci per applicare background -->
-          <div class="p-2 custom_bg">
+          <div class="d-none d-md-block p-2 custom_bg">
             <div class="row">
               <div class="col-3 pe-0"">
                 <img
@@ -254,10 +253,10 @@
                 src="./assets/imgs/main/image-18.jpg"
                 style="max-height: 70px"
                 />
-                <h5 class="text-truncate ms-3 my-0">Estate 2022</h5>
-                <div class="p_playlist">
-                  <i class="bi bi-play-circle-fill play_color shadow"></i>
-                </div>
+                <h5 class="text-truncate fs-6 ms-3 my-0">Estate 2022</h5>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-play-fill text-black shadow-lg" viewBox="0 0 16 16">
+                  <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
+                </svg>
               </div>
             </div>
             <div class="col">
@@ -267,10 +266,10 @@
                 src="./assets/imgs/main/image-8.jpg"
                 style="max-height: 70px"
                 />
-                <h5 class="text-truncate ms-3 my-0">Sangue Giovane</h5>
-                <div class="p_playlist">
-                  <i class="bi bi-play-circle-fill play_color shadow"></i>
-                </div>
+                <h5 class="text-truncate fs-6 ms-3 my-0">Sangue Giovane</h5>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-play-fill text-black shadow-lg" viewBox="0 0 16 16">
+                  <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
+                </svg>
               </div> 
             </div>
             <div class="col">
@@ -280,10 +279,10 @@
                 src="./assets/imgs/main/image-3.jpg"
                 style="max-height: 70px"
                 />
-                <h5 class="text-truncate ms-3 my-0">Massima Concentrazione</h5>
-                <div class="p_playlist">
-                  <i class="bi bi-play-circle-fill play_color shadow"></i>
-                </div>
+                <h5 class="text-truncate fs-6 ms-3 my-0">Massima Concentrazione</h5>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-play-fill text-black shadow-lg" viewBox="0 0 16 16">
+                  <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
+                </svg>
               </div>
             </div>
             <div class="col">
@@ -293,10 +292,10 @@
                 src="./assets/imgs/main/image-14.jpg"
                 style="max-height: 70px"
                 />
-                <h5 class="text-truncate ms-3 my-0">Allenamento a Casa</h5> 
-                <div class="p_playlist">
-                  <i class="bi bi-play-circle-fill play_color shadow"></i>
-                </div>
+                <h5 class="text-truncate fs-6 ms-3 my-0">Allenamento a Casa</h5> 
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-play-fill text-black shadow-lg" viewBox="0 0 16 16">
+                  <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
+                </svg>
               </div>
             </div>
             <div class="col">
@@ -306,13 +305,10 @@
                 src="./assets/imgs/main/image-4.jpg"
                 style="max-height: 70px"
                 />
-                <h5 class="text-truncate ms-3 my-0">Peaceful Piano</h5>
-                <div class="p_playlist">
-                  <i class="bi bi-play-circle-fill play_color shadow"></i>
-                </div>
-              </div>
-              <div class="p_playlist">
-                <i class="bi bi-play-circle-fill play_color shadow"></i>
+                <h5 class="text-truncate fs-6 ms-3 my-0">Peaceful Piano</h5>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-play-fill text-black shadow-lg" viewBox="0 0 16 16">
+                  <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
+                </svg>
               </div>
             </div>
             <div class="col">
@@ -322,20 +318,20 @@
                 src="./assets/imgs/main/image-6.jpg"
                 style="max-height: 70px"
                 />
-                <h5 class="text-truncate ms-3 my-0">Jazz Vibes</h5> 
-                <div class="p_playlist">
-                  <i class="bi bi-play-circle-fill play_color shadow"></i>
-                </div>
+                <h5 class="text-truncate fs-6 ms-3 my-0">Jazz Vibes</h5> 
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-play-fill text-black shadow-lg" viewBox="0 0 16 16">
+                  <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
+                </svg>
               </div>
             </div>
           </div>
           <div class="d-flex justify-content-between align-items-center mt-5">
-            <h5>Ascoltati di recente</h5>
+            <h5>Consigliati per oggi</h5>
             <p class="xsmall_txt text-muted m-0">Mostra tutto</p>
           </div>
 
-          <div id="show_album" class="row row-cols-xs-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-5 gy-3">
-            <!-- CARDS ASCOLTATI DI RECENTE -->
+          <div id="show_album" class="row row-cols-xs-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 gy-3">
+            <!-- CARDS CONSIGLIATI -->
             <!-- SM/MD None -->
           </div>
 
@@ -346,10 +342,12 @@
             <p class="xsmall_txt text-muted m-0">Mostra tutto</p>
           </div>
           <!-- ROW ARTISTI -->
-          <div id="show_art" class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-5 gy-3">
+          <div id="show_art" class="row row-cols-xs-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 gy-3">
             <!-- CARDS ARTIST -->
           </div>
-          <footer class="mt-5">
+
+          <!-- FOOTER -->
+          <footer class="my-5">
             <div class="row row-cols-2 row-cols-lg-5 gy-0">
               <div class="col">
                 <ul>
@@ -390,6 +388,17 @@
               <div class="col">
                 <div><i class="bi bi-instagram rounded-circle bg_two p-2 mx-1"></i><i class="bi bi-twitter rounded-circle bg_two p-2 mx-1"></i><i class="bi bi-facebook rounded-circle bg_two p-2 mx-1"></i></div>
               </div>
+            </div>
+            <div class="text-muted border-top py-5">
+              <ul>
+                <li>Informazioni legali</li>
+                <li>Sicurezza e Centro sulla privacy</li>
+                <li>Informativa sulla privacy</li>
+                <li>Impostazioni cookie</li>
+                <li>Info annunci</li>
+                <li>Accessibilità</li>
+              </ul>
+              
             </div>
           </footer>
         </div>
