--- a/artist.html
+++ b/artist.html
@@ -379,11 +379,11 @@
                 alt="Album Cover"
                 class="rounded me-3 me-4"
                 width="55"
-                id="player-bar-img"
+                id="artist-picture"
               />
               <div>
                 <strong id="player-bar-title">Fat Funny Friend</strong><br />
-                <small id="player-bar-artist">Maddie Zahm</small>
+                <small id="artist-name">Maddie Zahm</small>
               </div>
               <i class="bi bi-heart ms-3"></i>
             </div>
@@ -409,9 +409,7 @@
                     class="progress-bar"
                     role="progressbar"
                     style="width: 30%"
-                  >
-                    <!-- da mettere apposto con JS -->
-                  </div>
+                  ></div>
                 </div>
                 <small>3:20</small>
               </div>
