--- a/search.html
+++ b/search.html
@@ -25,7 +25,7 @@
             <input
               type="text"
               class="form-control"
-              placeholder="Cosa vuoi ascoltare?" />
+              placeholder="Artisti, brani e podcast" />
           </div>
         </div>
       </div>
