--- a/album.html
+++ b/album.html
@@ -159,7 +159,7 @@
               </div>
               <div class="dropdown d-none d-md-block pe-2">
                 <a class="btn rounded-pill bg-black2 py-0 p-3 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <i class="bi bi-person-circle me-1"></i>Team 8
+                  <i class="bi bi-person-circle"></i>Team 8
                 </a>
                 <ul class="dropdown-menu bg-black2">
                   <li><a class="dropdown-item" href="#">View profile</a></li>
@@ -169,7 +169,7 @@
               </div>
             </div>
           </div>
-          <div class="d-flex px-3 pt-3">
+          <div class="d-flex px-3 pt-5">
             <div>
               <img src="./assets/imgs/search/image-16.jpg" style="max-height: 170px" />
             </div>
@@ -435,9 +435,7 @@
               <div class="d-flex align-items-center">
                 <small class="current-duration">0:00</small>
                 <div class="progress mx-2 flex-grow-1">
-                  <div class="bg-white progress-bar" role="progressbar">
-                    <!-- da mettere apposto con JS -->
-                  </div>
+                  <div class="bg-white progress-bar" role="progressbar"></div>
                 </div>
                 <small class="duration-song">3:20</small>
               </div>
