--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spotyfy - lettore web: musica per tutti</title>
+    <title>Spotify - lettore web: musica per tutti</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -351,7 +351,7 @@
             <div class="row row-cols-2 row-cols-lg-5 gy-0">
               <div class="col">
                 <ul>
-                  <li>Azienda</li>
+                  <li class="text-white">Azienda</li>
                   <li>Chi Siamo</li>
                   <li>Opportunità di lavoro</li>
                   <li>For the Record</li>
@@ -359,7 +359,7 @@
               </div>
               <div class="col">
                 <ul>
-                  <li>Community</li>
+                  <li class="text-white">Community</li>
                   <li>Per Artisti</li>
                   <li>Sviluppatori</li>
                   <li>Pubblicità</li>
@@ -369,7 +369,7 @@
               </div>
               <div class="col">
                 <ul>
-                  <li>Link Utili</li>
+                  <li class="text-white">Link Utili</li>
                   <li>Assistenza</li>
                   <li>App per cellulare gratuita</li>
                   <li>Diritti del consumatore</li>
@@ -377,7 +377,7 @@
               </div>
               <div class="col">
                 <ul>
-                  <li>Piani Spotify</li>
+                  <li class="text-white">Piani Spotify</li>
                   <li>Premium Individual</li>
                   <li>Premium Duo</li>
                   <li>Premium Family</li>
@@ -385,11 +385,15 @@
                   <li>Spotify Free</li>
                 </ul>
               </div>
+              <!-- SOCIAL -->
               <div class="col">
-                <div><i class="bi bi-instagram rounded-circle bg_two p-2 mx-1"></i><i class="bi bi-twitter rounded-circle bg_two p-2 mx-1"></i><i class="bi bi-facebook rounded-circle bg_two p-2 mx-1"></i></div>
+                <div class="social_icon py-2">
+                  <a href="https://www.instagram.com/spotify/" target="_blank"><i class="bi bi-instagram rounded-circle bg_two p-2 mx-1"></i></a>
+                  <a href="https://x.com/spotify" target="_blank"><i class="bi bi-twitter rounded-circle bg_two p-2 mx-1"></i></a>
+                  <a href="https://www.facebook.com/SpotifyItalia" target="_blank"><i class="bi bi-facebook rounded-circle bg_two p-2 mx-1"></i></a></div>
               </div>
             </div>
-            <div class="text-muted border-top py-5">
+            <div class="last_div d-flex justify-content-between text-muted border-top py-5">
               <ul>
                 <li>Informazioni legali</li>
                 <li>Sicurezza e Centro sulla privacy</li>
@@ -398,7 +402,7 @@
                 <li>Info annunci</li>
                 <li>Accessibilità</li>
               </ul>
-              
+              <div><p>© 2024 Spotify AB</p></div>
             </div>
           </footer>
         </div>
@@ -492,7 +496,7 @@
             </div>
           </div>
         </div>
-
+    
          <!-- PLAYERBAR  -->
          <div class="container">
           <div id="play-bar" class="row position-fixed bottom-0 w-100 z-2">
