--- a/album.html
+++ b/album.html
@@ -128,15 +128,15 @@
           </div>
           <div class="d-flex px-3 pt-5">
             <div>
-              <img src="" style="width: 120px" class="album-cover" />
+              <img src="" style="width: 170px" class="album-cover" />
             </div>
-            <div class="ps-3 pt-4">
+            <div class="ps-3 pt-1">
               <small>ALBUM</small> <br />
               <div class="album-title-sticky">
                 <strong class="fs-1 fw-bold title-album"></strong>
               </div>
               <br />
-              <div class="d-flex align-items-center pt-4">
+              <div class="d-flex align-items-center">
                 <img src="" width="25" class="rounded-circle shadow artist-picture" />
                 <small class="px-2 album-info"> <span class="opacity-50"> </span></small>
               </div>
