--- a/album.html
+++ b/album.html
@@ -130,7 +130,7 @@
             <div>
               <img src="" style="width: 170px" class="album-cover" />
             </div>
-            <div class="ps-3 pt-1">
+            <div class="ps-3 pt-">
               <small>ALBUM</small> <br />
               <div class="album-title-sticky">
                 <strong class="fs-1 fw-bold title-album"></strong>
@@ -218,6 +218,19 @@
         <div class="container">
           <div id="player-bar" class="row position-fixed bottom-0 w-100 z-2">
             <div class="d-md-none p-3">
+              <div class="p-3 bg-spotify rounded-3 d-flex justify-content-between position-fixed song-fixed-player">
+                <div class="d-flex">
+                  <img width="60px" src="./assets/imgs/main/image-18.jpg" alt="" />
+                  <div class="ms-3 d-flex flex-column justify-content-center">
+                    <h5 class="m-0">Titolo Canzone</h5>
+                    <small>Artista</small>
+                  </div>
+                </div>
+                <div class="d-flex align-items-center gap-4">
+                  <i class="fs-4 bi bi-heart p-2 fs-3"></i>
+                  <i class="bi bi-play p-2 fs-1"></i>
+                </div>
+              </div>
               <div class="d-flex justify-content-around">
                 <a href="./homepage.html" class="text-decoration-none text-white pointer">
                   <div class="d-flex flex-column align-items-center justify-content-center">
