--- a/artist.html
+++ b/artist.html
@@ -299,6 +299,25 @@
         <div class="container">
           <div id="player-bar" class="row position-fixed bottom-0 w-100 z-2">
             <div class="d-md-none p-3">
+              <div
+                class="p-3 bg-spotify rounded-3 d-flex justify-content-between position-fixed song-fixed-player"
+              >
+                <div class="d-flex">
+                  <img
+                    width="60px"
+                    src="./assets/imgs/main/image-18.jpg"
+                    alt=""
+                  />
+                  <div class="ms-3 d-flex flex-column justify-content-center">
+                    <h5 class="m-0">Titolo Canzone</h5>
+                    <small>Artista</small>
+                  </div>
+                </div>
+                <div class="d-flex align-items-center gap-4">
+                  <i class="fs-4 bi bi-heart p-2 fs-3"></i>
+                  <i class="bi bi-play p-2 fs-1"></i>
+                </div>
+              </div>
               <div class="d-flex justify-content-around">
                 <a
                   href="./homepage.html"
@@ -372,6 +391,8 @@
                 <i
                   class="fs-2 mx-2 bi bi-play-circle-fill pointer play-btn"
                 ></i>
+                <audio id="audio-player" src=""></audio>
+
                 <i
                   class="fs-5 mx-2 bi bi-skip-forward-fill pointer next-btn"
                 ></i>
@@ -382,9 +403,7 @@
               <div class="d-flex align-items-center">
                 <small class="current-duration">0:00</small>
                 <div class="progress mx-2 flex-grow-1">
-                  <div class="bg-white progress-bar" role="progressbar">
-                    <!-- da mettere apposto con JS -->
-                  </div>
+                  <div class="bg-white progress-bar" role="progressbar"></div>
                 </div>
                 <small class="duration-song">3:20</small>
               </div>
