--- a/search.html
+++ b/search.html
@@ -178,7 +178,7 @@
     <!--PLAYER BAR-->
 
     <div class="container">
-      <div id="play-bar" class="row position-fixed bottom-0 w-100 z-2">
+      <div id="player-bar" class="row position-fixed bottom-0 w-100 z-2">
         <div class="d-md-none p-3">
           <div class="d-flex justify-content-around">
             <a
