--- a/album.html
+++ b/album.html
@@ -259,7 +259,7 @@
               </div>
             </div>
             <div class="col-3 d-flex align-items-center ps-4">
-              <img src="" alt="Album Cover" class="rounded me-3 me-4 image-song" width="55" />
+              <img src="./assets/imgs/main/image-12.jpg" alt="Album Cover" class="rounded me-3 me-4 image-song" width="55" />
               <div>
                 <strong class="title-song">Fat Funny Friend</strong><br />
                 <small class="artist-song">Maddie Zahm</small>
